@@ -86,6 +86,7 @@ Bugs fixed
 * #7562: autodoc: a typehint contains spaces is wrongly rendered under
   autodoc_typehints='description' mode
 * #7551: autodoc: failed to import nested class
+* #7637: autodoc: system defined TypeVars are shown in Python 3.9
 * #7551: autosummary: a nested class is indexed as non-nested class
 * #7535: sphinx-autogen: crashes when custom template uses inheritance
 * #7536: sphinx-autogen: crashes when template uses i18n feature
